# advanced_computer_graphics

./: CMakeLists.txt  performance.bash  plot_performance.py
include/: bounding_box.hpp  color.hpp  cornell_box.hpp  fps.hpp  pn_triangle.hpp  point3f.hpp  shaders_factory.hpp  sphere.hpp  triangle.hpp  vertex.hpp
shaders/: default.fshader  default.vshader
src/: bounding_box.cpp  cornell_box.cpp  fps.cpp  main.cpp  pn_triangle.cpp  point3f.cpp  shaders_factory.cpp  sphere.cpp  triangle.cpp  vertex.cpp
